--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@ function initialisetheLoader() {
 
 
 function getToken() {
-    var theUrl = '/api/refreshToken';
+    var theUrl = 'https://leanpiemodeller.herokuapp.com/api/refreshToken';
     var xmlHttp = null;
     xmlHttp = new XMLHttpRequest();
     xmlHttp.open('GET', theUrl, false);
