--- a/www/index.html
+++ b/www/index.html
@@ -80,6 +80,7 @@ function getToken() {
     xmlHttp.open('GET', theUrl, false);
     console.log("after we do da request");
     xmlHttp.send(null);
+    console.log("we sent da request");
     return xmlHttp.responseText;
 }
 
