--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,7 @@ function getToken() {
     var xmlHttp = null;
     console.log("before we do da request");
     xmlHttp = new XMLHttpRequest();
+    xmlHttp.origin = 'https://leanpiemodeller.herokuapp.com';
     xmlHttp.open('GET', theUrl, false);
     console.log("after we do da request");
     xmlHttp.send(null);
